--- a/index.html
+++ b/index.html
@@ -14,7 +14,13 @@
 <body>
   <header>
     <nav>
-      <div class="left">Abhi's Portfolio</div>
+
+      <div class="left">
+      Port<span class="purple">folio</span>
+      </div>
+
+
+
       <div class="menu-toggle" id="menu-toggle">☰</div> <!-- hamburger button -->
 
       <div class="right">
@@ -35,7 +41,7 @@
     <!-- Hero Section -->
     <section class="firstSection" id="home">
       <div class="leftSection">
-        Hi, My name is <span class="purple">Abhi</span>
+        Hi, My name is <span class="purple">Abhishek</span>
         <div>and I am a passionate</div>
         <div>Fullstack Developer</div>
         <span id="element"></span>
@@ -179,7 +185,7 @@
     <section class="secondSection" id="contact">
       <h1>Contact</h1>
       <div class="box">
-        <p>Email: abhivadnere98@gmail.com | Phone: 7854666666</p>
+        <p>Email: abhivadnere98@gmail.com | Location - Pune</p>
         <!-- <p>LinkedIn: <a href="https://www.linkedin.com/in/abhishek-vadnere-13a094259/" target="_blank">linkedin.com/in/yourprofile</a></p> -->
         <!-- <p>GitHub: <a href="https://github.com/Abhishekvadnere98" target="_blank">github.com/yourgithub</a></p> -->
 
