Updated portfolio code

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
         <img width="40" height="40" src="https://img.icons8.com/ios-filled/50/ffffff/linkedin.png" alt="LinkedIn" />
       </a>
 
-      <a href="https://www.instagram.com/shhh.aavu/" target="_blank">
+      <a href="" target="_blank">
         <img width="40" height="40" src="https://img.icons8.com/ios-glyphs/60/ffffff/instagram-new.png"
           alt="Instagram" />
       </a>
