Updated portfolio code

--- a/index.html
+++ b/index.html
@@ -66,8 +66,7 @@
       </a>
 
       <a href="" target="_blank">
-        <img width="40" height="40" src="https://img.icons8.com/ios-glyphs/60/ffffff/instagram-new.png"
-          alt="Instagram" />
+        <img width="40" height="40" src="https://img.icons8.com/ios-glyphs/60/ffffff/instagram-new.png" alt="Instagram" />
       </a>
       </div>
 
